# p2p-grpc

./: README.md
server/: .gitignore  Cargo.toml  build.rs
server/config/: log4rs.yml
server/proto/: test.proto
server/src/: chat.rs  main.rs
server/src/db/: db.rs  db_actor.rs  mod.rs
server/src/model/: mod.rs
