[package]
name = "server"
version = "0.1.0"
authors = ["Stefan <hoef.stef@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tonic = "0.5"
prost = "0.8"
webrtc-ice = "0.4.0"
anyhow = "1.0.44"
clap = "2.33.3"
rand = "0.8.4"
webrtc-util = "0.4.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.3.0"
hyper = { version = "0.14.13", features = ["full"] }
itertools = "0.10.1"
tokio-stream = "0.1.7"
rusqlite = "0.25.3"
uuid = "0.8.2"
actix = "0.12.0"
actix-rt = "2.2"

[build-dependencies]
tonic-build = "0.5"